--- a/App.css
+++ b/App.css
@@ -156,9 +156,54 @@ select {
     margin-right: 30px ;
 }
 .cancelButon{
-    padding: 10px;
+    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     background-color: #f5f5f5;
+    margin-right: 40px;
     
+}
+
+a:link, a:visited {
+    background-color: #d5d1d0;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    text-decoration: none;
+  }
+  a:hover, a:active {
+    background-color: red;
+  }
+
+  @media only screen and (max-width: 960px){
+    .cancelButton{
+        margin-left: 0px;
+    }
+
+.form{
+    width: 85%;
+    padding: 44px 20px;
+}
+}
+
+@media only screen and (max-width: 600px){
+    .form{
+        margin-top: 10px;
+    }
+    .row{
+        flex-direction: column;
+    }
+    .uploadButton{
+        justify-content: flex-start;
+    }
+    .profile-radio-button{
+        flex-wrap: wrap;
+    }
+    .submit-reset{
+        width: 100%;
+        display: flex;
+        flex-grow: 1;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
 }
